package sample.model.player;


/**
 * The class of the player
 */
public abstract class Player  {

    /**
     * The player win the game
     */
    public void win() {

    }

}
